--- a/src/main/resources/templates/sign_up.html
+++ b/src/main/resources/templates/sign_up.html
@@ -3,33 +3,35 @@
 <head>
     <meta charset="UTF-8">
     <title th:text="#{sign_up_title}"></title>
+    <link rel="stylesheet" th:href="@{/css/styles.css}">
 </head>
-<body>
-<h2 th:text="#{sign_up_title}"></h2>
-<form th:action="@{/sign_up_action}" method="post" th:object="${userRegisterDTO}">
-    <div>
-        <label th:text="#{sign_up_input_name}"></label>
-        <input type="text" th:field="*{name}" />
-        <span style="color: red;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
+<body class="body-in_center">
+<form class="sign-container" th:action="@{/sign_up_action}" method="post" th:object="${userRegisterDTO}">
+    <h2 class="sign-title" th:text="#{sign_up_title}"></h2>
+    <div class="sign-column-div">
+        <label class="sign-label" th:text="#{sign_up_input_name}"></label>
+        <input class="sign-input" type="text" th:field="*{name}" />
+        <span class="sign-error" style="color: red;" th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span>
     </div>
-    <div>
-        <label th:text="#{sign_up_input_surname}"></label>
-        <input type="text" th:field="*{surname}" />
-        <span style="color: red;" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></span>
+    <div class="sign-column-div">
+        <label class="sign-label" th:text="#{sign_up_input_surname}"></label>
+        <input class="sign-input" type="text" th:field="*{surname}" />
+        <span class="sign-error" style="color: red;" th:if="${#fields.hasErrors('surname')}" th:errors="*{surname}"></span>
     </div>
-    <div>
-        <label th:text="#{sign_up_input_email}"></label>
-        <input type="text" th:field="*{email}" />
-        <span style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
+    <div class="sign-column-div">
+        <label class="sign-label" th:text="#{sign_up_input_email}"></label>
+        <input class="sign-input" type="text" th:field="*{email}" />
+        <span class="sign-error" style="color: red;" th:if="${#fields.hasErrors('email')}" th:errors="*{email}"></span>
     </div>
-    <div>
-        <label th:text="#{sign_up_input_password}"></label>
-        <input type="text" th:field="*{password}" />
-        <span style="color: red;" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+    <div class="sign-column-div">
+        <label class="sign-label" th:text="#{sign_up_input_password}"></label>
+        <input class="sign-input" type="text" th:field="*{password}" />
+        <span class="sign-error" style="color: red;" th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
     </div>
     <div th:if="${registerError}" style="color:red;" th:text="${registerError}"></div>
-    <button type="submit" th:text="#{sign_up_btn_submit}"></button>
+    <button class="sign-btn" type="submit" th:text="#{sign_up_btn_submit}"></button>
+    <a th:href="@{/categories}" class="sign-btn-home" th:text="#{sign_redirect}"></a>
 </form>
-<a th:href="@{/sign_in}" class="btn btn-primary" th:text="#{sign_up_redirect}"></a>
+<a th:href="@{/sign_in}" class="sign-link" th:text="#{sign_up_redirect}"></a>
 </body>
 </html>
